test/semantics/programs/invalid/invalid-operation3.guav
# Should fail since incompatible operand types

x = 333 * true
